[tool.poetry]
name = "server py"  # Update this to change the name of your app
version = "0.1.0"
authors = []  # Update to include your email
readme = "README.md"
description = "Template for a FastAPI + Uvicorn based webserver project"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
deep_translator = "1.11.4"
union = "^0.1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"